Downgraded to java 8 for better compatibility